import java.util.ArrayList;

public class Media {

    // Egenskaber (variabler)
    protected String title;
    protected int year;
    protected double rating;
    protected String[] categories = {"Movies","Series","Search"};
    protected String runTime;
    protected int season;
    protected int episode;
    protected String[] genre = {"Action","Drama","Mystery","Adventure","Thriller","Comedy","History", "Animation", "Sci-fi", "Crime",
            "Biography","Family","Romance","Talkshow","Documentary","Horror","War","Sport","Film-Noir","Musical","Western","Music","Fantasy",};

    public Media(){


    }
}
