import util.FileIO;

import java.io.File;

public class Search{

    private String[] categories = {"Title Search","Movies","Series","Genres","Top10 Series","Top10 Movies"};


}
