@startuml
'https://plantuml.com/class-diagram

class Main {
+ static void main(String[] args)

}

class Movies {
Title
Year
Rating
Categories
Release date
}

class Series {
Title
Year
Ratings
Categories
Runtime
}

class Profil {
+ void history()
}

class StreamingService {
+ void logIn()
+ void signIn()
}

class Media {
Title
Year
Rating
Categories
}

class Search {
+ void genre()
+ void top10Movies()
+ void top10Series()
}

package "util" {
class TextUI {
Scanner scan
+ boolean promptBinary(String msg)
+ String promptText(String msg)
+ int promptNumeric(String msg)
+ ArrayList<String> promptChoice(ArrayList<String> options, int limit, String msg)
+ void displayMessage(String msg)
+ void displayList(ArrayList<String> list, String msg)
}

class FileIO{
+ void saveData(ArrayList<String> data, String path, String header)
+ ArrayList<String> readData(String path)
+ String[] readData(String path, int length)
}


Main -- StreamingService


StreamingService-- Profil
StreamingService -- TextUI
StreamingService-- FileIO

StreamingService -- Media
StreamingService-- Search

Media -- Movies
Media-- Series

Search -- Movies
Search-- Series

Profil -- Movies
Profil-- Series
@enduml